--- a/app/build.gradle
+++ b/app/build.gradle
@@ -60,4 +60,7 @@ dependencies {
     implementation 'com.google.firebase:firebase-auth-ktx:19.3.2'
     implementation 'com.google.firebase:firebase-database-ktx:19.3.1'
     implementation 'com.google.firebase:firebase-storage-ktx:19.1.1'
+
+    //Picasso
+    implementation 'com.squareup.picasso:picasso:2.71828'
 }
