--- a/app/build.gradle
+++ b/app/build.gradle
@@ -51,6 +51,18 @@ dependencies {
     implementation 'com.google.android.material:material:1.1.0'
     implementation 'androidx.navigation:navigation-fragment-ktx:2.0.0'
 
+    // Dagger
+    implementation "com.google.dagger:dagger:2.28"
+    implementation "com.google.dagger:dagger-android:2.28"
+    implementation "com.google.dagger:dagger-android-support:2.28"
+    implementation "androidx.arch.core:core-testing:2.1.0"
+    kapt "com.google.dagger:dagger-android-support:2.28"
+    kapt "com.google.dagger:dagger-android-processor:2.28"
+    kapt "com.google.dagger:dagger-compiler:2.28"
+
+    implementation "androidx.fragment:fragment-ktx:1.2.5"
+    debugImplementation "androidx.fragment:fragment-testing:1.2.5"
+
     // Firebase
     implementation 'com.google.firebase:firebase-auth-ktx:19.3.2'
     implementation 'com.google.firebase:firebase-database-ktx:19.3.1'
