--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,7 +5,7 @@ apply plugin: 'kotlin-kapt'
 apply plugin: 'com.google.gms.google-services'
 
 android {
-    compileSdkVersion 29
+    compileSdkVersion 30
     buildToolsVersion "29.0.3"
 
     defaultConfig {
@@ -49,24 +49,24 @@ dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
 
     // Google support libraries
-    implementation 'androidx.appcompat:appcompat:1.1.0'
-    implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
+    implementation 'androidx.appcompat:appcompat:1.2.0'
+    implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
     // RecyclerView
     implementation project(path: ':recyclerview')
     implementation "androidx.swiperefreshlayout:swiperefreshlayout:1.1.0"
-    implementation 'com.google.android.material:material:1.1.0'
-    implementation 'androidx.navigation:navigation-fragment-ktx:2.3.0'
+    implementation 'com.google.android.material:material:1.2.1'
+    implementation 'androidx.navigation:navigation-fragment-ktx:2.3.2'
     implementation "android.arch.lifecycle:extensions:1.1.1"
     implementation "android.arch.lifecycle:viewmodel:1.1.1"
 
     // Dagger
-    implementation "com.google.dagger:dagger:2.28"
-    implementation "com.google.dagger:dagger-android:2.28"
-    implementation "com.google.dagger:dagger-android-support:2.28"
+    implementation "com.google.dagger:dagger:2.29.1"
+    implementation "com.google.dagger:dagger-android:2.29.1"
+    implementation "com.google.dagger:dagger-android-support:2.29.1"
     implementation "androidx.arch.core:core-testing:2.1.0"
-    kapt "com.google.dagger:dagger-android-support:2.28"
-    kapt "com.google.dagger:dagger-android-processor:2.28"
-    kapt "com.google.dagger:dagger-compiler:2.28"
+    kapt "com.google.dagger:dagger-android-support:2.29.1"
+    kapt "com.google.dagger:dagger-android-processor:2.29.1"
+    kapt "com.google.dagger:dagger-compiler:2.29.1"
 
     implementation "androidx.fragment:fragment-ktx:1.2.5"
     debugImplementation "androidx.fragment:fragment-testing:1.2.5"
@@ -75,12 +75,12 @@ dependencies {
     implementation project(path: ':tableview')
 
     // Record Button
-    compile 'com.github.emrekose26:RecordButton:1.2.4'
+    implementation 'com.github.emrekose26:RecordButton:1.2.4'
 
     // Firebase
-    implementation 'com.google.firebase:firebase-auth-ktx:19.3.2'
-    implementation 'com.google.firebase:firebase-database-ktx:19.3.1'
-    implementation 'com.google.firebase:firebase-storage-ktx:19.1.1'
+    implementation 'com.google.firebase:firebase-auth-ktx:20.0.1'
+    implementation 'com.google.firebase:firebase-database-ktx:19.6.0'
+    implementation 'com.google.firebase:firebase-storage-ktx:19.2.1'
 
     // Images
     implementation 'com.github.bumptech.glide:glide:4.11.0'
