--- a/app/build.gradle
+++ b/app/build.gradle
@@ -86,4 +86,7 @@ dependencies {
     implementation 'com.github.bumptech.glide:glide:4.11.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.11.0'
     implementation 'com.mikhaellopez:circularimageview:4.2.0'
+
+    // Number Picker
+    implementation 'it.sephiroth.android.library:number-sliding-picker:1.1.1'
 }
