--- a/numberpicker/build.gradle
+++ b/numberpicker/build.gradle
@@ -50,4 +50,6 @@ dependencies {
 
     implementation 'io.reactivex.rxjava2:rxandroid:2.1.1'
     implementation 'io.reactivex.rxjava2:rxjava:2.2.10'
+
+    implementation 'com.google.android.material:material:1.0.0'
 }
